--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/projetos.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/projetos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body style="background-color: black;">
   <nav class="navbar " >
     <div class="container-fluid " >
         <a class="navbar-brand " href="#">
-          <img src="/img/giphy (6).gif" alt="" width="80" height="65" class="d-inline-block align-text-center">
+          <img src="./img/giphy (6).gif" alt="" width="80" height="65" class="d-inline-block align-text-center">
           Portifólio
         </a>
       <ul class="nav justify-content-end">
@@ -45,7 +45,7 @@
             <button><a href="">Download CV</a></button>
             <button><a href="">Entrar em contato</a></button>
         </div> 
-            <img src="/img/giphy (2).gif" alt="">
+            <img src="./img/giphy (2).gif" alt="">
     </div>
 
     <div class="container">
@@ -98,7 +98,7 @@
         <div class="container ">
           <div class="row text-center  justify-content-between">
             <div class="card  " style="width: 20rem;">
-              <img src="/img/Component 2.jpg" class="card-img-top" alt="...">
+              <img src="./img/Component 2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="card  " style="width: 20rem;">
-              <img src="/img/Component 2.jpg" class="card-img-top" alt="...">
+              <img src="./img/Component 2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="card " style="width: 20rem;">
-              <img src="/img/Component 4.jpg" class="card-img-top" alt="...">
+              <img src="./img/Component 4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -129,7 +129,7 @@
         <div class="container ">
           <div class="row text-center justify-content-between mt-5">
             <div class="card  " style="width: 20rem;">
-              <img src="/img/Component 2.jpg" class="card-img-top" alt="...">
+              <img src="./img/Component 2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -138,7 +138,7 @@
             </div>
 
             <div class="card  " style="width: 20rem;">
-              <img src="/img/Component 2.jpg" class="card-img-top" alt="...">
+              <img src="./img/Component 2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -147,7 +147,7 @@
             </div>
 
             <div class="card " style="width: 20rem;">
-              <img src="/img/Component 4.jpg" class="card-img-top" alt="...">
+              <img src="./img/Component 4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
