--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body style="background-color: black;">
-  <nav class="navbar " >
+  <nav class="navbar " id="nave" >
     <div class="container-fluid " >
-        <a class="navbar-brand " href="#">
+        <a class="navbar-brand " href="#"  id="logo">
           <img src="./img/giphy (6).gif" alt="" width="80" height="65" class="d-inline-block align-text-center">
           Portifólio
         </a>
@@ -37,15 +37,16 @@
     <div class="faixa-effect" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
   </div>
   
-    <div class="principal container d-flex align-items-lg-center mt-5">
-        <div class="texto">
+    <div class="principal container d-flex align-items-lg-center mt-5" >
+        <div class="texto" id="apresentacao">
             <h1>Olá, eu sou <br>
             Gerald Santos</h1>
-            <p>estudante/desenvolvedor full stack & UI Designer </p>
+            <p>estudante/desenvolvedor Software & UX Designer </p>
             <button><a href="">Download CV</a></button>
             <button><a href="">Entrar em contato</a></button>
-        </div> 
+        </div> <div class="img-principal" id="img-principal">
             <img src="./img/giphy (2).gif" alt="">
+          </div>
     </div>
 
     <div class="container">
@@ -57,7 +58,7 @@
           cursando o segundo período ,com formação para agosto de 2023 .</p>
         </div>
       
-      <div class="info container d-flex justify-content-between text-center mt-5">
+      <div class="info container d-flex justify-content-between text-center mt-5" id="effect">
         <div class="nome">
           <lord-icon
                 src="https://cdn.lordicon.com/eszyyflr.json"
@@ -79,14 +80,15 @@
         </lord-icon>
         <h4>E-mail</h4>
         <p>GeraldGabrields@gmail.com</p><br><br><br>
-        <h1>Projetos</h1><br>
       </div>
-      </div> 
+    </div>
+    
+    <div class="titulo text-center " id="sobre">
+      <h1>Projetos</h1>
     </div>
 
-
         <div class="container ">
-          <div class="row text-center  justify-content-between">
+          <div class="row text-center  justify-content-between mt-5" id="card">
             <div class="card  " style="width: 20rem;">
               <img src="./img/Component 2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -117,7 +119,7 @@
         </div>
 
         <div class="container ">
-          <div class="row text-center justify-content-between mt-5">
+          <div class="row text-center justify-content-between mt-5" id="card">
             <div class="card  " style="width: 20rem;">
               <img src="./img/Component 2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
